--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <option>24*7customer care</option>
 <option>Trending stores</option>
 <option>flipkart plus zone</option></select>
-<th align="center"><img src="C:\Users\vishn\Desktop\flipkart\img\newcart.jpg" height="50px" width="30px"><th><font color="white">Cart</font></th></th>
+<th align="center"><img src=".\img\newcart.jpg" height="50px" width="30px"><th><font color="white">Cart</font></th></th>
 </tr></table>
 <table width="100%" border="0" bgcolor="white" height="5%">
 <br><br>
 <tr>
-<th width="12"><img src="C:\Users\vishn\Desktop\flipkart\img\groceryNew.jpg"></th>
-<th width="12"><img src="C:\Users\vishn\Desktop\flipkart\img\mo.jpg"></th>
+<th width="12"><img src=".\img\groceryNew.jpg"></th>
+<th width="12"><img src="\img\mo.jpg"></th>
 <th width="12"><img src="C:\Users\vishn\Desktop\flipkart\img\fashionNew.jpg"></th>
 <th width="12"><img src="C:\Users\vishn\Desktop\flipkart\img\laptopNew.jpg"></th>
 <th width="12"><img src="C:\Users\vishn\Desktop\flipkart\img\hom.jpg"></th>
